--- a/CreerCompte.html
+++ b/CreerCompte.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head> 
-    <title>Création du compte</title>
+    <title>Création d'une annonce</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
 
@@ -84,6 +84,23 @@
       <p><input type="text" id="mdp"  name="password" /></p>
     </div>
 </div>
+<div class="container">
+	<div class="col1">
+  <p><label for="Catégorie">Catégorie: </label></p>
+    </div>
+    <div class="col2">
+	  <p><select name="Categorie" id="Categorie">
+									<option value="Meuble">Meuble</option>
+									<option value="Ustensile">Ustensile</option>
+									<option value="Livres">Livres</option>
+									<option value="Jeux">Jeux Vidéos/DVD/CD</option>
+									<option value="Vetements">Vetements</option>
+									<option value="Divers">Divers</option>
+									<option value="Hitech">Hi-tech</option>
+									<option value="Outils">Outils</option>
+									<option value="Sports">Sports</option>
+								</select></p>
+    </div>
 <div class="container">
 	<div class="col1">
 	  <p><label for="mail">E-mail : </label></p>
